--- a/isso/map.jinja
+++ b/isso/map.jinja
@@ -1,2 +1,2 @@
-{% import_yaml 'ghost/defaults.yaml' as default_settings %}
+{% import_yaml 'isso/defaults.yaml' as default_settings %}
 {% set isso = salt['pillar.get']('isso', default=default_settings.get('isso'), merge=True) %}
